--- a/templates/ratings.html
+++ b/templates/ratings.html
@@ -13,7 +13,8 @@
           <select name="rating">
             <!-- TODO: If the user has rated a movie, make the select box default to that rating when they visit this page.
                  Hint: How can you use jinja2's templates to include a tag (or text) only
-                 if a server side condition is met?  -->
+                 if a server side condition is met? 
+                so you'll use the select tag to create a drop down menu.  You'll be hardcoding the list of movies watched so you can generate a list using the for statement in html.  For each item generated, you'll include that select tag and a submit button that all just point to a html that confirms the rating.  You don't need to place it into any database or list at this time.  Just getting used to creating something like that is the focus. -->
             {% for rating in ["How was it?", "*", "**", "***", "****", "*****"] %}
               <option>{{ rating }}</option>
             {% endfor %}
